--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
     <!-- PRELOADER START  -->
     <div class="preloader">
         <div class="box">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div></div><div></div><div></div>
         </div>
     </div>
     <!-- PRELOADER END  -->
@@ -59,7 +57,7 @@
                 <li><a href="#about" class="link-item outer-shadow hover-in-shadow">ABOUT</a></li>
                 <li><a href="#services" class="link-item outer-shadow hover-in-shadow">SERVICES</a></li>
                 <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">PORTFOLIO</a></li>
-                <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">TESTIMONIALS</a></li>
+                <!-- <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">TESTIMONIALS</a></li> -->
                 <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">CONTACT</a></li>
             </ul>
         </div>
@@ -426,7 +424,7 @@
                     <span class="filter-item outer-shadow active" data-target="all">All</span>
                     <span class="filter-item" data-target="website">Website</span>
                     <span class="filter-item" data-target="react">React</span>
-                    <span class="filter-item" data-target="e-commerce">E Commerce</span>
+                    <!-- <span class="filter-item" data-target="e-commerce">E Commerce</span> -->
                 </div>
             </div>
             <!-- PORTFOLIO FILTER ENDS  -->
@@ -447,7 +445,7 @@
                             <!-- view project btn  -->
                             <span class="view-project">View Project</span>
                         </div>
-                        <p class="portfolio-item-title">personal portfolio</p>
+                        <p class="portfolio-item-title">MIIC Website</p>
                         <!-- portfolio item details start  -->
                         <div class="portfolio-item-details">
                             <div class="row">
@@ -480,7 +478,7 @@
                             <!-- view project btn  -->
                             <span class="view-project">View Project</span>
                         </div>
-                        <p class="portfolio-item-title">wedding couple</p>
+                        <p class="portfolio-item-title">Omni Food Website</p>
                         <!-- portfolio item details start  -->
                         <div class="portfolio-item-details">
                             <div class="row">
@@ -508,7 +506,7 @@
                 <div class="portfolio-item" data-category="react">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
-                            <img src="./resources/img/portfolio/thumb/project-3.png" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-3/1.png,
+                            <img src="./resources/img/portfolio/thumb/project-3.jpg" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-3/1.png,
                             ./resources/img/portfolio/large/project-3/2.png,
                             ./resources/img/portfolio/large/project-3/3.png,
                             ./resources/img/portfolio/large/project-3/4.png,
@@ -516,7 +514,7 @@
                             <!-- view project btn  -->
                             <span class="view-project">View Project</span>
                         </div>
-                        <p class="portfolio-item-title">product landing page</p>
+                        <p class="portfolio-item-title">Vcare Website</p>
                         <!-- portfolio item details start  -->
                         <div class="portfolio-item-details">
                             <div class="row">
