--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#about" class="link-item outer-shadow hover-in-shadow">ABOUT</a></li>
                 <li><a href="#services" class="link-item outer-shadow hover-in-shadow">SERVICES</a></li>
                 <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">PORTFOLIO</a></li>
-                <!-- <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">TESTIMONIALS</a></li> -->
+                <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">TESTIMONIALS</a></li>
                 <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">CONTACT</a></li>
             </ul>
         </div>
