hamburger btn bug

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a href="#home" class="link-item inner-shadow active">HOME</a></li>
                 <li><a href="#about" class="link-item outer-shadow hover-in-shadow">ABOUT</a></li>
                 <li><a href="#services" class="link-item outer-shadow hover-in-shadow">SERVICES</a></li>
-                <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">PORTFOLIO</a></li>
+                <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">Projects</a></li>
                 <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">TESTIMONIALS</a></li>
                 <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">CONTACT</a></li>
             </ul>
@@ -280,9 +280,9 @@
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-graduation-cap icon"></i>
-                                        <span>2012 - 2014</span>
-                                        <h3>Master in Computer Science</h3>
-                                        <!-- <h4>Company name, India</h4> -->
+                                        <span>2019 - 2023</span>
+                                        <h3>Bachelor of Computer Science and Engineering</h3>
+                                        <h4>Medi-Caps University, Indore</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
                                     </div>
                                 </div>
