--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 
                     <!-- SOCIAL LINK STARTS  -->
                     <div class="social-links">
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/badjatya/" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/badjatya" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
+                        <a href="https://www.instagram.com/badjatya/" class="outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
+                        <a href="https://twitter.com/ArchitJ66283845" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/archit.badjatya/" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook-f"></i></a>
                     </div>
                     <!-- SOCIAL LINK ENDS  -->
 
@@ -155,8 +155,19 @@
                         <div class="skill-item">
                             <p>Html</p>
                             <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(50% - 14px);">
-                                    <span>50%</span>
+                                <div class="progress-bar" style="width: calc(85% - 14px);">
+                                    <span>85%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>CSS</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(75% - 14px);">
+                                    <span>75%</span>
                                 </div>
                             </div>
                         </div>
@@ -165,39 +176,6 @@
                         <!-- SKILLS ITEM START  -->
                         <div class="skill-item">
                             <p>JavaScript</p>
-                            <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(60% - 14px);">
-                                    <span>60%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- SKILLS ITEM ENDS  -->
-
-                        <!-- SKILLS ITEM START  -->
-                        <div class="skill-item">
-                            <p>BootStrap</p>
-                            <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(70% - 14px);">
-                                    <span>70%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- SKILLS ITEM ENDS  -->
-
-                        <!-- SKILLS ITEM START  -->
-                        <div class="skill-item">
-                            <p>Jquery</p>
-                            <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(80% - 14px);">
-                                    <span>80%</span>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- SKILLS ITEM ENDS  -->
-
-                        <!-- SKILLS ITEM START  -->
-                        <div class="skill-item">
-                            <p>React Js</p>
                             <div class="progress inner-shadow">
                                 <div class="progress-bar" style="width: calc(90% - 14px);">
                                     <span>90%</span>
@@ -208,10 +186,98 @@
 
                         <!-- SKILLS ITEM START  -->
                         <div class="skill-item">
-                            <p>CSS</p>
+                            <p>React Js</p>
                             <div class="progress inner-shadow">
-                                <div class="progress-bar" style="width: calc(100% - 14px);">
-                                    <span>100%</span>
+                                <div class="progress-bar" style="width: calc(80% - 14px);">
+                                    <span>80%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Bootstrap</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(70% - 14px);">
+                                    <span>70%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>C</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(75% - 14px);">
+                                    <span>75%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>C++</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(85% - 14px);">
+                                    <span>85%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Java</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(40% - 14px);">
+                                    <span>40%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Jquery</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(65% - 14px);">
+                                    <span>65%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Git & Github</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(90% - 14px);">
+                                    <span>90%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Wordpress</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(70% - 14px);">
+                                    <span>70%</span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- SKILLS ITEM ENDS  -->
+
+                        <!-- SKILLS ITEM START  -->
+                        <div class="skill-item">
+                            <p>Adobe Photoshop</p>
+                            <div class="progress inner-shadow">
+                                <div class="progress-bar" style="width: calc(70% - 14px);">
+                                    <span>70%</span>
                                 </div>
                             </div>
                         </div>
@@ -281,7 +347,7 @@
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-graduation-cap icon"></i>
                                         <span>2019 - 2023</span>
-                                        <h3>Bachelor of Computer Science and Engineering</h3>
+                                        <h3>Bachelor of CSE(AI)</h3>
                                         <h4>Medi-Caps University, Indore</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
                                     </div>
@@ -292,9 +358,9 @@
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-graduation-cap icon"></i>
-                                        <span>2012 - 2014</span>
-                                        <h3>Master in Computer Science</h3>
-                                        <!-- <h4>Company name, India</h4> -->
+                                        <span>2018 - 2019</span>
+                                        <h3>Senior Secondary (XII), Science</h3>
+                                        <h4>Lions Higher Secondary School, Manawar</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
                                     </div>
                                 </div>
@@ -304,9 +370,9 @@
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-graduation-cap icon"></i>
-                                        <span>2012 - 2014</span>
-                                        <h3>Master in Computer Science</h3>
-                                        <!-- <h4>Company name, India</h4> -->
+                                        <span>2015 - 2016</span>
+                                        <h3>Secondary (X)</h3>
+                                        <h4>Lions Junior College, Manawar</h4>
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
                                     </div>
                                 </div>
