--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                 </div>
 
                 <div class="about-info">
-                    <p><span>Hi! My name is Archit Badjatya. I am a Web Developer </span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto reiciendis corrupti quidem suscipit provident ut, sequi unde aliquid, ipsum commodi ipsa incidunt totam itaque doloribus enim necessitatibus aperiam atque nemo! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi mollitia qui praesentium nemo tenetur dolore iure harum temporibus, aperiam eos, excepturi cumque ea assumenda rem, perferendis voluptate? Sunt, laborum facilis.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam porro maiores consequatur est fugit sequi sint placeat quisquam ad vero voluptate iste veritatis, totam nisi. Ipsam commodi non quos mollitia!</p>
+                    <p> <span> Hey Peeps! I am Archit Badjatya</span>, <span>A Front - End Web Developer</span> and I am residing in Indore, Madhya Pradesh. I am pursuing Bachelor of Computer Science and Engineering specialization in Artificial Intelligence and currently I am in Second year. Owing to my education, my inclination has been towards software development, mainly Full Stack Web Development, Data Structures and Algorithms, and Competitive Programming. My belief is in maximizing the spreading of knowledge, which has led me in contributing to many open source projects.</p>
+
+                    <p>I've also a keen interest in Rekki and Meditation. Other than that, I can be found Mentoring, Teaching, Doing Photography,  Exploring nature, Travelling, Trekking, Learning new things, and Spending time with my family are my leisure interests.</p>
                     <a href="./resources/resume/ArchitBadjatya.pdf" class="btn-1 outer-shadow hover-in-shadow">Download CV</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire Me</a>
                 </div>
@@ -299,8 +300,8 @@
                                         <i class="fas fa-briefcase icon"></i>
                                         <span>June, 2020 - Present</span>
                                         <h3>CEO & Co-Founder</h3>
-                                        <h4>Efarm, India</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                        <h4>EFarm, India</h4>
+                                        <p>EFarm is a Start-up which in Incubated under Medi-Caps Innovation and Incubation Center(MIIC).EFarm is platform which we connect to farmers digitally. We sell Farming Products such as Fertilizers, Growth Boosters, etc </p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM START  -->
@@ -312,7 +313,7 @@
                                         <span>Jan, 2021 - Present</span>
                                         <h3>Asst. Head Web Development</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                        <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation Center(MIIC). I have mentored several Students through out my Journey in MIIC. I have also taken several Workshops on Topics like Hacktoberfest, Html5, CSS3, JavaScript, Bootstap and Git & Github</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM START  -->
@@ -571,18 +572,15 @@
                 <!-- PORTFOLIO ITEM END  -->
 
                 <!-- PORTFOLIO ITEM START  -->
-                <div class="portfolio-item" data-category="react">
+                <div class="portfolio-item" data-category="website">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
-                            <img src="./resources/img/portfolio/thumb/project-3.jpg" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-3/1.png,
-                            ./resources/img/portfolio/large/project-3/2.png,
-                            ./resources/img/portfolio/large/project-3/3.png,
-                            ./resources/img/portfolio/large/project-3/4.png,
-                            ./resources/img/portfolio/large/project-3/5.png">
+                            <img src="./resources/img/portfolio/thumb/project-3.png" alt="portfolio" data-screenshot="./resources/img/portfolio/large/project-3/1.png,
+                            ./resources/img/portfolio/large/project-3/2.png">
                             <!-- view project btn  -->
                             <span class="view-project">View Project</span>
                         </div>
-                        <p class="portfolio-item-title">Vcare Website</p>
+                        <p class="portfolio-item-title">Random Joke Generator</p>
                         <!-- portfolio item details start  -->
                         <div class="portfolio-item-details">
                             <div class="row">
@@ -595,7 +593,7 @@
                                     <ul>
                                         <li>Date - <span>2020</span></li>
                                         <li>Client - <span>xyz</span></li>
-                                        <li>Tools - <span>Html,Css,JavaScript</span></li>
+                                        <li>Tools - <span>Html,Css,JavaScript,Jquery</span></li>
                                         <li>Web - <span><a href="#">www.domain.com</a></span></li>
                                     </ul>
                                 </div>
@@ -605,6 +603,8 @@
                     </div>
                 </div>
                 <!-- PORTFOLIO ITEM END  -->
+
+                
 
             </div>
             <!-- PORTFOLIO ITEMS ENDS  -->
