--- a/index.html
+++ b/index.html
@@ -294,6 +294,34 @@
                     <div class="row">
                         <div class="timeline">
                             <div class="row">
+                                
+                                
+
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>Jan, 2021 - Present</span>
+                                        <h3>Asst. Head Web Development</h3>
+                                        <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
+                                        <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation Center (MIIC). I have mentored several Students through out my Journey in MIIC. I have also taken several Workshops on Topics like Hacktoberfest, Html5, CSS3, JavaScript, Bootstap and Git & Github</p>
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM End  -->
+
+                                <!-- TIMELINE ITEM START  -->
+                                <div class="timeline-item">
+                                    <div class="timeline-item-inner outer-shadow">
+                                        <i class="fas fa-briefcase icon"></i>
+                                        <span>Oct, 2020 - Present</span>
+                                        <h3>Web Development Team - Core Member</h3>
+                                        <h4>Student Technical And Innovation Cell (STIC)</h4>
+                                        <p>I am core member of University's Biggest Technical Cell where I have conducted few workshop on HTML5, CSS3, and JavaScript. </p>
+                                        <!-- <p> I have created a website for a University Event</p> -->
+                                    </div>
+                                </div>
+                                <!-- TIMELINE ITEM End  -->
+
                                 <!-- TIMELINE ITEM START  -->
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
@@ -304,31 +332,7 @@
                                         <p>EFarm is a Start-up which in Incubated under Medi-Caps Innovation and Incubation Center(MIIC).EFarm is platform which we connect to farmers digitally. We sell Farming Products such as Fertilizers, Growth Boosters, etc </p>
                                     </div>
                                 </div>
-                                <!-- TIMELINE ITEM START  -->
-
-                                <!-- TIMELINE ITEM START  -->
-                                <div class="timeline-item">
-                                    <div class="timeline-item-inner outer-shadow">
-                                        <i class="fas fa-briefcase icon"></i>
-                                        <span>Jan, 2021 - Present</span>
-                                        <h3>Asst. Head Web Development</h3>
-                                        <h4>Medi-Caps Incubation and Innovation Center</h4>
-                                        <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation Center(MIIC). I have mentored several Students through out my Journey in MIIC. I have also taken several Workshops on Topics like Hacktoberfest, Html5, CSS3, JavaScript, Bootstap and Git & Github</p>
-                                    </div>
-                                </div>
-                                <!-- TIMELINE ITEM START  -->
-
-                                <!-- TIMELINE ITEM START  -->
-                                <div class="timeline-item">
-                                    <div class="timeline-item-inner outer-shadow">
-                                        <i class="fas fa-briefcase icon"></i>
-                                        <span>Oct, 2020 - Present</span>
-                                        <h3>Web Development Team - Core Member</h3>
-                                        <h4>Student Technical And Innovation Center</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
-                                    </div>
-                                </div>
-                                <!-- TIMELINE ITEM START  -->
+                                <!-- TIMELINE ITEM END  -->
                             </div>
                         </div>
                     </div>
@@ -350,7 +354,7 @@
                                         <span>2019 - 2023</span>
                                         <h3>Bachelor of CSE(AI)</h3>
                                         <h4>Medi-Caps University, Indore</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                        <p>Student at Medicaps University</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM START  -->
@@ -408,7 +412,7 @@
                             <i class="fas fa-code"></i>
                         </div>
                         <h3>Front End Developer</h3>
-                        <p>With our skills in front-end web technologies such as HTML5, CSS3 and Javascript, we can create a flexible, responsive site that looks good on all screen sizes.</p>
+                        <!-- <p>With our skills in front-end web technologies such as HTML5, CSS3 and Javascript, we can create a flexible, responsive site that looks good on all screen sizes.</p> -->
                     </div>
                 </div>
                 <!-- SERVICE ITEM END  -->
@@ -420,7 +424,7 @@
                             <i class="fas fa-laptop-code"></i>
                         </div>
                         <h3>Web Design</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p> -->
                     </div>
                 </div>
                 <!-- SERVICE ITEM END  -->
@@ -432,7 +436,7 @@
                             <i class="fas fa-palette"></i>
                         </div>
                         <h3>Graphic Design</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p> -->
                     </div>
                 </div>
                 <!-- SERVICE ITEM END  -->
@@ -445,7 +449,7 @@
                             <i class="fas fa-mobile-alt"></i>
                         </div>
                         <h3>Responsive Design</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p> -->
                     </div>
                 </div>
                 <!-- SERVICE ITEM END  -->
@@ -457,7 +461,7 @@
                             <i class="fas fa-search"></i>
                         </div>
                         <h3>SEO Marketing</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p> -->
                     </div>
                 </div>
                 <!-- SERVICE ITEM END  -->
@@ -469,7 +473,7 @@
                             <i class="fas fa-bullhorn"></i>
                         </div>
                         <h3>Great Support</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p>
+                        <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptas!</p> -->
                     </div>
                 </div>
                 <!-- SERVICE ITEM END  -->
