--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <a href="https://www.linkedin.com/in/badjatya/" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://github.com/badjatya" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
                         <a href="https://www.instagram.com/badjatya/" class="outer-shadow hover-in-shadow"><i class="fab fa-instagram"></i></a>
-                        <a href="https://twitter.com/ArchitJ66283845" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
+                        <a href="https://twitter.com/ArchitBadjatya" class="outer-shadow hover-in-shadow"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.facebook.com/archit.badjatya/" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook-f"></i></a>
                     </div>
                     <!-- SOCIAL LINK ENDS  -->
