--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                                         <span>2019 - 2023</span>
                                         <h3>Bachelor of CSE(AI)</h3>
                                         <h4>Medi-Caps University, Indore</h4>
-                                        <p>Student at Medicaps University</p>
+                                        <p>Student at Medi-Caps University Indore, India. Persuading Bachelor of Technology (B-Tech) in Computer Science Engineering (CSE) specialized in Artificial Intelligence (AI). </p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM START  -->
