--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                         <span>2018 - 2019</span>
                                         <h3>Senior Secondary (XII), Science</h3>
                                         <h4>Lions Higher Secondary School, Manawar</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                        <p>I had completed my Senior Secondary (XII) schooling at Lion's Higher Secondary School Manawar, Dhar. At a percentage of 77.8% in the Science stream (PCM).</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM START  -->
