Education 10th updated

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                                         <span>2015 - 2016</span>
                                         <h3>Secondary (X)</h3>
                                         <h4>Lions Junior College, Manawar</h4>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, neque incidunt quos autem vitae iste tempore cumque libero animi sit fugit deleniti sequi, placeat repellendus officia. Quos vel eligendi quibusdam.</p>
+                                        <p>I had completed my Secondary (X) schooling at Lion's Junior College Manawar, Dhar. With a CGPA of 7.80, Having the position of School captain in 2016.</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM START  -->
