--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-briefcase icon"></i>
                                         <span>Jan, 2021 - Present</span>
-                                        <h3>Head Web Development Team</h3>
+                                        <h3>Web Development Team</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
                                         <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation
                                             Center (MIIC). I have mentored several Students through out my Journey in
