--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-briefcase icon"></i>
-                                        <span>Jan, 2021 - Present</span>
+                                        <span>Feb, 2021 - March, 2021</span>
                                         <h3>Web Development Intern</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
                                         <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation
