--- a/index.html
+++ b/index.html
@@ -351,8 +351,6 @@
                         <div class="timeline">
                             <div class="row">
 
-
-
                                 <!-- TIMELINE ITEM START  -->
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
@@ -374,7 +372,7 @@
                                         <i class="fas fa-briefcase icon"></i>
                                         <span>Feb, 2021 - March, 2021</span>
                                         <h3>Web Development Intern</h3>
-                                        <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
+                                        <h4>Infonium</h4>
                                         <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation
                                             Center (MIIC). I have mentored several Students through out my Journey in
                                             MIIC. I have also taken several Workshops on Topics like Hacktoberfest,
