--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                                 <div class="timeline-item">
                                     <div class="timeline-item-inner outer-shadow">
                                         <i class="fas fa-briefcase icon"></i>
-                                        <span>Jan, 2021 - Present</span>
+                                        <span>Sept, 2020 - Dec, 2020</span>
                                         <h3>Web Development Team - Core Member</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
                                         <p>I have Created 4 pages for The Website of Medi-Caps Incubation and Innovation
