--- a/index.html
+++ b/index.html
@@ -419,9 +419,7 @@
                                         <span>Oct, 2020 - Present</span>
                                         <h3>Web Development Team - Core Member</h3>
                                         <h4>Student Technical And Innovation Cell (STIC)</h4>
-                                        <p>I am core member of University's Biggest Technical Cell where I have
-                                            conducted few workshop on HTML5, CSS3, and JavaScript. </p>
-                                        <!-- <p> I have created a website for a University Event</p> -->
+                                        <p>I am core member of University's Biggest Technical Cell where I haveconducted few workshop on HTML5, CSS3, and JavaScript. I have created a website for a University Event of STIC called as IONOS - 2020</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM End  -->
