--- a/index.html
+++ b/index.html
@@ -403,8 +403,7 @@
                                         <span>Sept, 2020 - Dec, 2020</span>
                                         <h3>Web Development Team - Core Member</h3>
                                         <h4>Medi-Caps Incubation and Innovation Center (MIIC)</h4>
-                                        <p>I have designed The Website of Medi-Caps Incubation and Innovation Center (MIIC). I have mentored several Students through out my Journey in
-                                        MIIC. I have also taken several Workshops on Topics like Hacktoberfest, Html5, CSS3, JavaScript, Bootstap and Git & Github</p>
+                                        <p>I have designed The Website of Medi-Caps Incubation and Innovation Center (MIIC). I have participated in several Workshops conducted by Medi-Caps Incubation and Innovation Center (MIIC) on topics like Motion Graphics and Photoshop</p>
                                     </div>
                                 </div>
                                 <!-- TIMELINE ITEM End  -->
